--- a/css/mobile.css
+++ b/css/mobile.css
@@ -31,7 +31,7 @@ button:last-of-type {
 
 /*responsive*/
 
-/*@media screen and (min-width: 40em) {*/
+/*@media screen and (min-width: 40em) {
 
   body {
     display: grid;
@@ -45,7 +45,7 @@ button:last-of-type {
   
   
   /*slide bar*/
-  
+  /*
   [type="range"] {
   
           -webkit-transform:rotate(-90deg);
@@ -76,16 +76,16 @@ button:last-of-type {
   }
 
 
-/*}*/
+/* }*/
 
 
 /* Spinner */
-input[type="number"].mod::-webkit-outer-spin-button,
+input[type="number"].mod::-webkit-outer-spin-button, 
 input[type="number"].mod::-webkit-inner-spin-button {
     /* display: none; <- Crashes Chrome on hover */
     -webkit-appearance: none;
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
-    background: #eee; /* url('http://i.stack.imgur.com/YYySO.png') no-repeat 50% 50%;*/
+    background: #eee; /* url('http://i.stack.imgur.com/YYySO.png') no-repeat 50% 50%;*/  
     width: 14px;
     height: 14px;
     padding: 4px;
