--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@
 
 /*buttons*/
 
- button {
+button {
   margin: 0;
   /*margin: 3px 3px 3px 3px;*/
   padding: 2px;
@@ -34,6 +34,10 @@
   max-height: 100%;
   border: 1px;
   border-radius: .5em;
+}
+
+#controler-1 > button {
+  margin-right: 1em;
 }
 
 #record {
@@ -69,9 +73,8 @@
 #myUploadBtn {
   color: #ffffff;
   background: linear-gradient(116deg, #f08c00, #fbd54f);
-  display: inline-block;
   padding: 5px;
-  margin: auto;
+  margin: 1em;
   font-size: 1em;
   border-radius: .5em;
 }
@@ -98,10 +101,10 @@ input[type="number"].mod::-webkit-inner-spin-button {
     /* display: none; <- Crashes Chrome on hover */
     -webkit-appearance: none;
     margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
-    background: #eee; /* url('http://i.stack.imgur.com/YYySO.png') no-repeat 50% 50%;*/
-    width: 14px;
-    height: 10px;
-    max-height: 100%;
+    background: url('http://i.stack.imgur.com/YYySO.png') no-repeat 50% 50%;
+    /*width: 14px;*/
+    /*height: auto;*/
+    /*max-height: 100%;*/
     padding: 4px;
     position: relative;
     right: 4px;
@@ -109,7 +112,7 @@ input[type="number"].mod::-webkit-inner-spin-button {
     opacity: .5; /* shows Spin Buttons per default (Chrome >= 39) */
 }
 
-
+/*
 input[type=number] {
   width: 90%;
   height: 10px;
@@ -120,20 +123,21 @@ input[type=number] {
   -webkit-border-radius: 1px;
   border-radius: 1px;
   text-align: center;
-  /*border: 3px solid black;*/
+  /*border: 3px solid black;
   display: inline-block;
-  /*margin-left: 6%;*/
+  /*margin-left: 6%;
   background: #ffffff;
 }
+*/
 
 input#inSel[type=number] {
   width: 90%;
-  height: 10vw;
 }
 
 input#selGain[type=number] {
   height: auto;
 }
+*/
 
 input[type="checkbox"] {
   color: #f2930e;
@@ -150,7 +154,7 @@ header {
   background-color: none;
 }
 
-#controler-1 {
+#mainmenu {
   background-color: #ffffff;
 }
 
@@ -166,7 +170,8 @@ header {
 #footer {
   background-color: none;
   grid-area: footer;
-  align-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 #credit {
@@ -192,6 +197,15 @@ header {
 }
 
 #controler-1 {
+  display: flex;
+}
+
+#controler-2, #rowName {
+  display: flex;
+  justify-content: center;
+}
+
+#mainmenu {
   /*margin-left: 160px; /* Same as the width of the sidebar */
   padding: 10px 10px;
   height: 70vh;
@@ -230,11 +244,6 @@ input#delete {
   background-color: orangered;
 }
 
-body {
-  max-width: 1000px;
-  background: #ececec;
-}
-
 h1 {
   color: white;
 }
@@ -250,6 +259,9 @@ h1 {
   color: darkorange;
 }
 
+#hint > [type="number"] {
+  width: 2rem;
+}
 
 /*
 p.borderBelow {
@@ -283,6 +295,10 @@ p.borderBelow {
        "footer footer";
     grid-template-columns: 1fr 5fr;
     grid-gap: 20px;
+    max-width: 1000px;
+    background: #ececec;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   
@@ -298,6 +314,16 @@ p.borderBelow {
   
   [type="range"] {
     width: 90%;
+  }
+
+
+  #panel > [type="checkbox"],
+  #panel > [type="number"] {
+    width: 4rem
+  }
+
+  #panel > [type="text"] {
+    width: 6rem
   }
   
   
