--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,117 @@
   font-style: normal;
 }
 /*Copyright (c) 2011, Heydon Pickering (http://www.heydonworks.com | heydon@heydonworks.com),
-/ with Reserved Font Name 'Heydings Controls'. This Font Software is licensed under the SIL Open Font License, Version 1.1.
+/ with Reserved Font Name 'Heydings Controls'. This Font Software is licensed under the SIL Open Font License, Version 1.1.*/
+
+/* https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/ */
+/* Applying base CSS styles */
+input[type=range] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  background: transparent; /* Otherwise white in Chrome */
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type=range]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+
+  /* Hides the slider so custom styles can be added */
+  background: transparent; 
+  border-color: transparent;
+  color: transparent;
+}
+
+/* custom range */
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 2em 0;
+  width: 100%;
+}
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  background: linear-gradient(to right, #98e34a 70%, #c4e4a2, #c0c0c0);
+  border-radius: 1.3px;
+  border: none;
+  margin: 2em 0;
+}
+input[type=range]::-webkit-slider-thumb {
+  border: none;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background: #ed8c01;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -6px;
+}
+
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  background: linear-gradient(to right, #98e34a 70%, #c4e4a2, #c0c0c0);
+  border-radius: 1.3px;
+  border: none;
+}
+input[type=range]::-moz-range-thumb {
+  border: none;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background: #ed8c01;
+  cursor: pointer;
+}
+
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 8.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #2a6495;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+  background: #3071a9;
+  border: 0.2px solid #010101;
+  border-radius: 2.6px;
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #3071a9;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #367ebd;
+}
 
 /*buttons*/
 
@@ -36,6 +146,14 @@ button {
   border-radius: .5em;
 }
 
+button:focus {
+  outline: none;
+}
+
+input:focus {
+  outline: none;
+}
+
 #controler-1 > button {
   margin-right: 1em;
 }
@@ -51,6 +169,10 @@ button {
   color: #ffffff;
 }
 
+#playall:disabled {
+  background: linear-gradient(116deg, #3632331e, #f8f5f5);
+}
+
 .iconButton::after {
   font-family: HeydingsControlsRegular;
   font-size: 2em;
@@ -63,20 +185,28 @@ button {
   color: #ffffff
 }
 
+#download:disabled {
+  background: linear-gradient(116deg, #3632331e, #f8f5f5);
+}
+
 #start {
   max-width: 100%;
   /*height: auto;*/
-  background: linear-gradient(116deg, white, grey);
+  background: linear-gradient(116deg, grey, white);
   color: #ffffff;
 }
 
 #myUploadBtn {
+  display: flex;
+  justify-content: center;
   color: #ffffff;
   background: linear-gradient(116deg, #f08c00, #fbd54f);
   padding: 5px;
   margin: 1em;
   font-size: 1em;
   border-radius: .5em;
+  width: 150px;
+  max-width: 30%;
 }
 
 #upload {
@@ -303,9 +433,8 @@ p.borderBelow {
   
   
   /*slide bar*/
-  
+
   [type="range"] {
-  
           -webkit-transform:rotate(-90deg);
              -moz-transform:rotate(-90deg);
                -o-transform:rotate(-90deg);
