--- a/css/custom_class.css
+++ b/css/custom_class.css
@@ -45,8 +45,13 @@ input[type="number"]::-webkit-inner-spin-button {
 
 /* Check box */
 
+my-checkbox {
+  width: 40px
+}
+
 input[type="checkbox"] {
   display: none;
+  width: 40px;
 }
 
 input[type="checkbox"]+label {
@@ -60,11 +65,11 @@ input[type="checkbox"]+label::before {
   background: #ffffff;
   border-radius: 15%;
   display: block;
-  width: 3em;
-  height: 3em;
+  width: 2em;
+  height: 2em;
   position: absolute;
-  top: 100%;
-  left: 0;
+  top: 120%;
+  left: 100%;
   transform: translateY(-50%);
   border: none;
   /*cursor: pointer;*/
@@ -73,14 +78,14 @@ input[type="checkbox"]+label::before {
 input[type=checkbox]:checked+label::after {
   content: "";
   display: block;
-  width: 1.6em;
-  height: 1em;
+  width: 1.4em;
+  height: 0.6em;
   box-sizing: border-box;
   border-bottom: 4px solid #f2930e;
   border-left: 4px solid #f2930e;
   position: absolute;
-  top: 65%;
-  left: 70%;
+  top: 100%;
+  left: 120%;
 
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
